fixed whitespace at bottom, textbox breaks when zoomed out, still need to fix scrolling

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,25 +1,16 @@
-html {
-  height: 100%;
-  width: 100%;
-  overflow-x: hidden;
+html{
+  min-height:100%;
+  overflow: hidden;
 }
+
 body {
-  position: static;
+  min-height:100%;
   background-color: lavenderblush;
     /* background: url('img\pexels-sergey-chetvertnykh-880639.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover; */
-  }
-  
-  .copyright {
-    display: block;
-  }
-
-  .footer {
-    background-color: #2c3e50;
-    color: #fff;
   }
 
 .text-80 {
@@ -35,8 +26,22 @@ body {
 }
 
 .chat-bg {
-  height: 90%;
+  height: 95%;
   overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.textbox-container {
+ max-height: 10vh;
+}
+
+.icon-size {
+  font-size: 3vw;
+}
+input.textbox {
+  height: 5vh;
+  max-height: 3vmax;
+  width: 100%;
 }
 
 .bg-chatbot {
@@ -53,4 +58,12 @@ body {
 
 .top-bar {
   height: 3vh;
+}
+
+#footer-bottom {
+  height: 53px;
+  margin: 0 auto;
+  overflow: hidden;
+  padding: 0 40px;
+  width: 940px;
 }
